[tool.poetry]
name = "poetry-bug"
version = "0.1.0"
description = ""
authors = ["Audun Skaugen <audun.skaugen@cognite.com>"]

packages = [{include='poetry-bug', from='lib'}]
include = ['lib/poetry-bug/generated.py']

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
